# flashot

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  benchmark.ts  biome.json  cli.ts  docker-compose.yml  jsr.json  nginx.conf  package.json  todo.md  tsconfig.json  tsdown.config.ts  vite.config.ts  vitest.config.ts
.config/: commitlint.config.ts  eslint.config.ts  lefthook.yml
.github/: AUTHORS  CONTRIBUTING.md
.github/workflows/: autofix.yml  cd.yml  ci.yml  codeql-analysis.yml  publish.yml  toolchain.yml
api/: .dockerignore  API_DOCS.md  DEPLOYMENT.md  Dockerfile  README.md  package-lock.json  package.json
api/src/: index.ts  router.ts
cli/: .gitignore  cmd.ts  index.ts  menu.ts  option.ts  package.json  tsconfig.json  tsdown.config.ts
cli/src/: cmd.ts  index.ts  menu.ts  option.ts
docs/: README.md  api-reference.md  cli-usage.md  configuration.md  examples.md  installation.md  npm-usage.md
examples/: index.js  package-lock.json  package.json
package/: .gitignore  benchmark.ts  jsr.json  package.json  todo.md  tsconfig.json  tsdown.config.ts  vitest.config.ts
scripts/: deploy.sh  verify-deployment.sh
src/: cache.ts  core.ts  index.ts  options.ts  shared.ts  types.d.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
test/: index.test.ts
web/: .eslintrc.js  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  next.config.electron.js  next.config.js  package-lock.json  package.json  setup.bat  setup.sh  tailwind.config.js  todo.md  tsconfig.json
(+145 files in other folders)
