[package]
name = "flashot"
version = "1.5.1"
description = "Rapidly snapshot code snippets as images"
authors = [ "thuongtruong109" ]
license = "MIT"
repository = "https://github.com/thuongtruong109/flashot"
edition = "2021"

[lib]
name = "flashot_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies.tauri-build]
version = "2.5.3"
features = [ ]

[dependencies]
tauri-plugin-shell = "2.3.3"
tauri-plugin-notification = "2.3.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-store = "2.4.1"
serde_json = "1"

[dependencies.tauri]
version = "2.9.4"
features = [
  "tray-icon",
  "unstable"
]

[dependencies.serde]
version = "1"
features = [ "derive" ]
